--- a/index.html
+++ b/index.html
@@ -12,22 +12,26 @@
             <input type="text">
         </div>
         <div class="numpad">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>/</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>X</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>-</button>
-            <div></div>
-            <button>0</button>
-            <button>=</button>
-            <button>+</button>
+            <button disabled></button>
+            <button value="C">C</button>
+            <button value="<"><</button>
+            <button value="/">/</button>
+            <button value="7">7</button>
+            <button value="8">8</button>
+            <button value="9">9</button>
+            <button value="/">/</button>
+            <button value="4">4</button>
+            <button value="5">5</button>
+            <button value="6">6</button>
+            <button value="X">X</button>
+            <button value="1">1</button>
+            <button value="2">2</button>
+            <button value="3">3</button>
+            <button value="-">-</button>
+            <button value='.'>.</button>
+            <button value="0">0</button>
+            <button value="=">=</button>
+            <button value="+">+</button>
         </div>
     </section>
     <script src="script.js"></script>
